--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "commander": "~2.11.0",
     "http-proxy": "~1.16.2",
     "lynx": "^0.2.0",
+    "newrelic": "^5.6.3",
     "strftime": "~0.10.0",
     "winston": "~2.3.1"
   },
